# monkeytype-helpers

./: README.md  create_monkeytype_patch.py  monkeytype_config.py  monkeytype_patch_generator.py  monkeytype_run.py  monkeytype_w_tkinter.py  monkeytype_wrapper.py  pyment_wrapper.py  pyproject.toml  script_at_root_dir.py
monkeytype_sandbox/: __init__.py  dummy_module.py  regular_module.py
monkeytype_sandbox/foo/bar/: nested_regular_module.py
monkeytype_sandbox/foo/bar/nested_folder/: nested_script.py
patches/: monkeytype_sandbox___init__.patch  nested_regular_module_imports.patch  nested_script_imports.patch  regular_module_imports.patch  script_at_root_dir_imports.patch  verify_overwrite_copy.patch
tests/: run_package_init_file.py  test_monkeytype_run.py  test_monkeytype_sandbox.py  verify_overwrite_copy.py  verify_overwrite_final.py
tests/module_imports/: nested_regular_module_imports.py  nested_script_imports.py  regular_module_imports.py  script_at_root_dir_imports.py
