[tool.poetry]
name = "monkeytype_sandbox"
version = "0.1.0"
description = ""
authors = ["JD <10216562+joeld1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
MonkeyType = "^21.5.0"
pyment = {git = "https://github.com/dadadel/pyment.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
